 * Fix: Allow inline panels to be ordered (LB (Ben) Johnston)
 * Fix: Only show draft / live status tags on snippets that have `DraftStateMixin` applied (Sage Abdullah)
 * Fix: Prevent JS error when initialising chooser modals with no tabs (LB (Ben) Johnston)
 * Fix: Add missing vertical spacing between chooser modal header and body when there are no tabs (LB (Ben) Johnston)


4.0.1 (05.09.2022)
~~~~~~~~~~~~~~~~~~

 * Fix: On the Locked Pages report, limit the "locked by" filter to just users who have locked pages (Stefan Hammer)
 * Fix: Prevent JavaScript error when using StreamField on views without commenting support, such as snippets (Jacob Topp-Mugglestone)
 * Fix: Modify base template for new projects so that links opened from the preview panel open in a new window (Sage Abdullah)
 * Fix: Prevent circular import error between custom document models and document chooser blocks (Matt Westcott)


4.0 (31.08.2022)
~~~~~~~~~~~~~~~~

 * Added support for Django 4.1
 * Added a new `BaseGenericSetting` base model class that allows defining a settings model that applies to all sites rather than just a single site (Kyle Bayliss)
 * Add clarity to confirmation when being asked to convert an external link to an internal one (Thijs Kramer)
 * Convert the rest of the documentation to Markdown (Khanh Hoang, Vu Pham, Daniel Kirkham, LB (Ben) Johnston, Thiago Costa de Souza, Benedict Faw, Noble Mittal, Sævar Öfjörð Magnússon, Sandeep M A, Stefano Silvestri)
 * Add `base_url_path` to `ModelAdmin` so that the default URL structure of app_label/model_name can be overridden (Vu Pham, Khanh Hoang)
 * Add `full_url` to the API output of `ImageRenditionField` (Paarth Agarwal)
 * Use `InlinePanel`'s label when available for field comparison label (Sandil Ranasinghe)
 * Drop support for Safari 13 by removing left/right positioning in favour of CSS logical properties (Thibaud Colas)